# AOC2024

./: CMakeLists.txt  README.md
src/day-1/: main.cpp
src/day-2/: main.cpp
src/day-3/: main.cpp
src/day-4/: main.cpp
src/day-5/: main.cpp
